betulian nilai spk awal, dll

--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -658,7 +658,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-penilaian" class="btn btn-success pull-left next-step" attrStatus="BUKAAMPLOP" elDari="#next-klarifikasi-dari" elSampai="#next-klarifikasi-sampai" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-penilaian" class="btn btn-success pull-left next-step " attrStatus="BUKAAMPLOP" elDari="#next-klarifikasi-dari" elSampai="#next-klarifikasi-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -746,7 +746,7 @@
                                                                         </div>
 
                                                                     </div>
-                                                                    <div class="row">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-4">
                                                                             <div class="form-group ">
                                                                                 <label class="title">Next Step</label>
@@ -754,10 +754,10 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row">
+                                                                    <div class="row bingkai-pic-pelaksanaan">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-klarifikasi" class="btn btn-success pull-left next-step" attrstatus="KLARIFIKASI" disabled="disabled">NextStep</button>
+                                                                                <button id="btn-next-klarifikasi" class="btn btn-success pull-left next-step " attrstatus="KLARIFIKASI" disabled="disabled">NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                         <div class="col-md-2">
