--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -688,7 +688,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <a class="btn btn-success lihat-penilaian"> Lihat Harga Penawaran Rekanan</a>
+                                                                                <a class="btn btn-success lihat-penilaian-buka-amplop"> Lihat Harga Penawaran Rekanan</a>
                                                                             </div>
                                                                         </div>
                                                                     </div>
