--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -374,7 +374,7 @@
                                                 <div class="box-body">
                                                     <div class="box-group" id="accordion">
                                                         <!--aanwjing-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-anwijzing" data-parent="#accordion" href="#collapseOne">
@@ -488,7 +488,7 @@
                                                             </div>
                                                         </div>
                                                         <!--submit penawaran-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-submit-penawaran" data-parent="#accordion" href="#collapseTwo">
@@ -548,7 +548,7 @@
                                                             </div>
                                                         </div>
                                                         <!--buka amplop-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-buka-amplop" data-parent="#accordion" href="#collapseThree">
@@ -666,7 +666,7 @@
                                                             </div>
                                                         </div>
                                                         <!--klarifikasi & negoisasi-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-klarifikasi" data-parent="#accordion" href="#collapse5">
@@ -799,7 +799,7 @@
                                                             </div>
                                                         </div>
                                                         <!--klarifikasi & negoisasi lanjutan-->
-                                                        <div class="panel box box-primary panel-klarifikasi-lanjut" style="display:none">
+                                                        <div class="panel box box-primary panel-klarifikasi-lanjut remove-direksi" style="display:none">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-klarifikasi-lanjutan" data-parent="#accordion" href="#detail-klarifikasi-lanjutan">
@@ -918,7 +918,7 @@
                                                             </div>
                                                         </div>
                                                         <!--penilaian-->
-                                                        <div class="panel box box-primary panel-penilaian" style="display:none">
+                                                        <div class="panel box box-primary panel-penilaian remove-direksi" style="display:none">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-penilaian-kandidat" data-parent="#accordion" href="#collapse4">
@@ -1525,7 +1525,6 @@
                 </table>
 	          </div>
 	          <div class="modal-footer">
-                  <a class="btn btn-default adduserterkai" data-toggle="tooltip" title="Pilih" >Pilih </a>	
 		        <button type="button" class="btn btn-default " data-dismiss="modal" >Close</button>		
 	          </div>
 	        </div><!-- /.modal-content -->
