--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -138,7 +138,7 @@
             <input type="hidden" id="isTEAM" />
             <input type="hidden" id="isPersonil" />
             <input type="hidden" id="State" />
-             <input type="hidden" id="StatusName" />
+            <input type="hidden" id="StatusName" />
             <input type="hidden" id="StatusTahapan" value="0" />
             <input type="hidden" id="AturanPengadaan" />
             <input type="hidden" id="AturanPenawaran" />
@@ -373,7 +373,7 @@
                                                     <div class="box-group" id="accordion">
                                                         <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
                                                          <!-- pendaftaran-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-pendaftaran" data-parent="#accordion" href="#collapsePendaftaran">
@@ -467,7 +467,7 @@
                                                             </div>
                                                         </div>
                                                          <!-- Anwjizing-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-anwijzing" data-parent="#accordion" href="#collapseOne">
@@ -581,7 +581,7 @@
                                                             </div>
                                                         </div>
                                                         <!-- submit penwaran-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-submit-penawaran" data-parent="#accordion" href="#collapseTwo">
@@ -640,7 +640,7 @@
                                                             </div>
                                                         </div>
                                                         <!-- buka amplop-->
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-buka-amplop" data-parent="#accordion" href="#collapseThree">
@@ -756,7 +756,7 @@
                                                             </div>
                                                         </div>
                                                         <!--klarifikasi & negoisasi-->    
-                                                        <div class="panel box box-primary">
+                                                        <div class="panel box box-primary remove-direksi">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-klarifikasi" data-parent="#accordion" href="#collapse5">
@@ -895,7 +895,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>                                                        <!--klarifikasi & negoisasi lanjutan-->
-                                                        <div class="panel box box-primary panel-klarifikasi-lanjut" style="display:none">
+                                                        <div class="panel box box-primary panel-klarifikasi-lanjut remove-direksi" style="display:none">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-klarifikasi-lanjutan" data-parent="#accordion" href="#detail-klarifikasi-lanjutan">
@@ -1014,7 +1014,7 @@
                                                             </div>
                                                         </div>
                                                         <!--penilaian-->
-                                                        <div class="panel box box-primary panel-penilaian" style="display:none">
+                                                        <div class="panel box box-primary panel-penilaian remove-direksi" style="display:none">
                                                             <div class="box-header with-border">
                                                                 <h4 class="box-title text-blue-mtf">
                                                                     <a id="tab-penilaian-kandidat" data-parent="#accordion" href="#collapse4">
@@ -1415,7 +1415,6 @@
                         </table>
                     </div>
                     <div class="modal-footer">
-                        <a class="btn btn-default adduserterkai" data-toggle="tooltip" title="Pilih">Pilih </a>
                         <button type="button" class="btn btn-default " data-dismiss="modal">Close</button>
                     </div>
                 </div><!-- /.modal-content -->
