pelaksanaan-terbuka, Pengadaan Detail, Buka Amplop

--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -338,17 +338,17 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-md-12">
-                                                        <label>PIC</label>
+                                                        <label>PIC GA & Procurement</label>
                                                         <a id="addPerson-pic" attr1=".listperson-pic" style="margin-top:10px;margin-bottom:10px;display:none" class="addPerson btn btn-sm btn-social btn-bitbucket">
                                                             <i class="fa fa-plus"></i>
-                                                            Rubah PIC
+                                                            Ubah PIC GA & Procurement
                                                         </a>
                                                         <div class="listperson-pic">
 
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <label>Tim</label>
+                                                        <label>Tim GA & Procurement</label>
                                                         <div class="listperson-tim">
                                                         </div>
                                                     </div>
@@ -383,7 +383,7 @@
                                                                     <label id="aanwijzing_aktual" style="font-size:0.8em"></label>
                                                                 </h4>
                                                                 <button attr1="#aanwijzing_pelaksanaan" attr2="aanwijzing_pelaksanaan" attr3="aanwijzing_pelaksanaan" style="float:right;margin-left:10px" class="btn btn-success ubah-jadwal jadwal-aanwijzing action-pelaksanaan"><i class="fa fa-fw fa-calendar"></i>Ubah</button>
-                                                                <input type="text" disabled="" value="12/02/2016" id="aanwijzing_pelaksanaan" style=" float:right;width:20%" class="form-control dateJadwal jadwal-aanwijzing ">
+                                                                <input type="text" disabled="" value="12/02/2016" id="aanwijzing_pelaksanaan" style="float:right;width:20%" class="form-control dateJadwal jadwal-aanwijzing ">
                                                             </div>
                                                             <div id="collapseOne" class="panel-collapse collapse">
                                                                 <div class="box-body">
@@ -604,7 +604,7 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="col-md-10">
-                                                                            <div class="row">
+                                                                            <div class="row only-ga-team">
                                                                                 <div class="col-md-8">
                                                                                     <div class="form-group">
                                                                                         <label class="title">Tanggal Berita Acara</label>
@@ -615,7 +615,7 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
-                                                                            <div class="row">
+                                                                            <div class="row only-ga-team">
                                                                                 <div class="col-md-8">
                                                                                     <div class="form-group ">
                                                                                         <label class="title">Unggah Berita Acara</label>
@@ -624,7 +624,7 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-                                                                        <div class="col-md-2">
+                                                                        <div class="col-md-2 only-ga-team">
                                                                             <div class="form-group">
                                                                                 <label class="title">
                                                                                     Unduh Berita Acara
