--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -336,17 +336,17 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-md-12">
-                                                        <label>PIC</label>
+                                                        <label>PIC GA & Procurement</label>
                                                         <a id="addPerson-pic" attr1=".listperson-pic" style="margin-top:10px;margin-bottom:10px;display:none" class="addPerson btn btn-sm btn-social btn-bitbucket">
                                                             <i class="fa fa-plus"></i>
-                                                            Rubah PIC
+                                                            Ubah PIC GA & Procurement
                                                         </a>
                                                         <div class="listperson-pic">
 
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <label>Tim</label>
+                                                        <label>Tim GA & Procurement</label>
                                                         <div class="listperson-tim">
                                                         </div>
                                                     </div>
