--- a/Reston.EProc.Runner.IIS/View/rekanan-side-detail-pengadaan.html
+++ b/Reston.EProc.Runner.IIS/View/rekanan-side-detail-pengadaan.html
@@ -136,12 +136,12 @@
 										    </div>		                
 										    <div class="nav-tabs-custom">
 											    <ul class="nav nav-tabs"id="myTab">
-											        <li class="active"><a href="#rencana_kerja" id="tab-rk" data-toggle="tab">Rencana Kerja</a></li>
-											        <li><a href="#perlaksanaan" id="tab-pelakasanaan" data-toggle="tab" >Pelaksanaan</a></li>
+											        <li><a href="#rencana_kerja" id="tab-rk" data-toggle="tab">Rencana Kerja</a></li>
+											        <li class="active"><a href="#perlaksanaan" id="tab-pelakasanaan" data-toggle="tab" >Pelaksanaan</a></li>
 											        
 											    </ul>
 											    <div class="tab-content">
-												    <div id="rencana_kerja" class="tab-pane active">
+												    <div id="rencana_kerja" class="tab-pane">
 														    <div class="row">
 															    <div class="col-md-12">
 																    <div class=" panel-header-white">
@@ -223,7 +223,7 @@
 
 														    
 												    </div>
-											        <div id="perlaksanaan" class="tab-pane">                                                           
+											        <div id="perlaksanaan" class="tab-pane active">                                                           
                                                         <div class="box-body">
                                                               <div class="box-group" id="accordion">
                                                                 <div class="panel box box-primary">
