--- a/Reston.EProc.Runner.IIS/View/rks-penilaian-buka-amplop.html
+++ b/Reston.EProc.Runner.IIS/View/rks-penilaian-buka-amplop.html
@@ -199,19 +199,19 @@
                                     </table>
                                 </div>
                             </div>
-                             <div class="row">
+                             <div class="row only-ga-team">
 							    <div class="col-md-12">
 								    <div class="panel-header-white" style="padding-top:20px;padding-bottom:20px;">
 									    <span class="title-header">Kriteria Pembobotan</span>
 								    </div>
 							    </div>
 						    </div>
-                            <div class="row">
+                            <div class="row only-ga-team">
                                 <div id="kreteriaPembobotan">
 
                                 </div>
                             </div>
-                           <div class="row">
+                           <div class="row only-ga-team">
                                  <div class="col-md-3">
                                       <button  class="btn btn-sm btn-success edit-bobot-kriteria" >Simpan</button>
                                   </div>
@@ -219,19 +219,19 @@
                                       <img id="kriteria-loader" src="Images/ajax-loader.gif" style="display:none" />
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row only-ga-team">
 							    <div class="col-md-12">
 								    <div class="panel-header-white"  style="padding-top:20px;padding-bottom:20px;">
 									    <span class="title-header">Nilai Pembobotan Rekanan</span>
 								    </div>
 							    </div>
 						    </div>
-                            <div class="row">
+                            <div class="row only-ga-team">
                                 <div id="NilaiPembobotanRekanan">
 
                                 </div>
                             </div>
-                             <div class="row">
+                             <div class="row only-ga-team">
                                  <div class="col-md-3">
                                       <button  class="btn btn-sm btn-success input-nilai-kriteria-vendor" >Simpan</button>
                                   </div>
