Rks Penilaian, Berita Acara Klarifikasi dan Negosiasi, Nota Bersama Usulan Pemenang

--- a/Reston.EProc.Runner.IIS/View/rks-penilaian.html
+++ b/Reston.EProc.Runner.IIS/View/rks-penilaian.html
@@ -213,7 +213,7 @@
                             </div>
                            <div class="row">
                                  <div class="col-md-3">
-                                      <button  class="btn btn-sm btn-success edit-bobot-kriteria" >Simpan</button>
+                                      <button  class="btn btn-sm btn-success edit-bobot-kriteria only-ga-team" >Simpan</button>
                                   </div>
                                 <div class="col-md-3">
                                       <img id="kriteria-loader" src="Images/ajax-loader.gif" style="display:none" />
@@ -233,7 +233,7 @@
                             </div>
                              <div class="row">
                                  <div class="col-md-3">
-                                      <button  class="btn btn-sm btn-success input-nilai-kriteria-vendor" >Simpan</button>
+                                      <button  class="btn btn-sm btn-success input-nilai-kriteria-vendor only-ga-team" >Simpan</button>
                                   </div>
                                  <div class="col-md-3">
                                       <img id="nilai-vendor-loader" src="Images/ajax-loader.gif" style="display:none" />
